[package]
name = "rlb"
version = "0.1.0"
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
actix-web = "1.0.9"
env_logger = "0.7.1"