[package]
name = "rlb"
version = "0.1.0"
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0-alpha.1"
actix-web = { git = "https://github.com/actix/actix-web", tag = "v2.0.0-alpha.1" }
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
env_logger = "0.7.1"
futures = "0.3.1"
url = "2.1.0"