[package]
name = "rlb"
version = "0.1.0"
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0-alpha.3"
actix-web = { version = "2.0.0-alpha.3" }
futures = "0.3.1"
lazy_static = "1.4.0"
url = "2.1.0"
